error: Need to fix error 500 when trying to register a new restaurant